# afl-solver-1

./: .breakpoints  .gitignore  .replit  GetCSVOptionList.py  GetListFromCSV.py  InitiateSession.py  NumericOptionArrayFunctions.py  PlayerList.py  app.py  combo.py  flask.py  main.py  player-list.csv  pyproject.toml  real-data.csv  replit.nix  results-requirements.txt  solver.py  summary.py  team-list.csv  test-data-real.csv  test-data.csv  venue-list.csv
automations/: csvHtmlConverter.py  dataList (copy).html  dataListFixer.py  dataList_corrected.html  optionRemover.py  playerList2023.csv  player_names.html
solver_python_app/: README.md
solver_python_app/old_code/: combo.py
static/css/: AFLSolver.css
static/scripts/: GetDatalistId.js  SubmitForm.js
templates/: DataList.html  Error.html  ErrorPage.html  PlayerListOption.html  SelectOptionList.html  SubmitForm.html  csrfTokenField.html  index.html  layout.html  results.html
