[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
flask = "3.0.1"
pandas = "^2.2.0"
pyarrow = "15.0.0"
pysolver = "^0.0.3"
summary = "^0.2.0"
beautifulsoup4 = "^4.12.3"
matplotlib = "^3.8.3"
itsdangerous = "^2.1.2"
werkzeug = "^3.0.1"
wtforms = "^3.1.2"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"